<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/human_gray" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/user_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvUserName"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tvUserName"
        android:text="@string/screen_name" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:layout_marginTop="2dp"
        android:autoLink="web"
        android:text="@string/status_text" />

    <TextView
        android:id="@+id/tvCreateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvScreenName"
        android:layout_alignParentRight="true"
        android:text="@string/create_time" />

    <ImageView
        android:id="@+id/ivMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvText"
        android:layout_below="@+id/tvText"
        android:src="@drawable/camera_gray" 
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/media"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivMedia"
        android:layout_below="@+id/ivMedia"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/ivReply"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/reply"
                android:src="@drawable/reply_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/retweet"
                android:src="@drawable/retweet_gray" />

            <TextView
                android:id="@+id/tvRetweetCount"
                style="@style/actText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/zero" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/favorite"
            android:src="@drawable/favourite_gray" />

        <TextView
            android:id="@+id/tvFavouriteCount"
            style="@style/actText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zero" />
    </LinearLayout>



</RelativeLayout>