<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/human_gray" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/user_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:layout_marginTop="2dp"
        android:text="@string/screen_name"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/swipeUserContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10dp" >

        <ListView
            android:id="@+id/lvUserTimeline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tvUserDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivProfileImage"
        android:layout_below="@+id/ivProfileImage"
        android:layout_marginTop="8dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserDesc"
        android:layout_below="@+id/tvUserDesc"
        android:text="@string/location"
        android:layout_marginTop="5dp"
         />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvLocation"
        android:layout_below="@+id/tvLocation" 
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tvFollowingCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFollowerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/zero"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_toRightOf="@+id/tvLocation"
        android:text="@string/website" 
        android:autoLink="web"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>