<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="7dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/human_gray" 
        android:contentDescription="@string/profile_image"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:layout_marginTop="5dp"
        android:text="@string/screen_name"
        android:textSize="12sp" />

</RelativeLayout>
